create manager and admin creation on start
